feat(band-coverage): add material library, color palette, and coverage store
- Implemented a comprehensive material library with various materials including their properties such as epsilon, refractive index, and design windows.
- Created a color palette for consistent UI styling across the application.
- Established a Zustand store for managing band coverage state, including hovered and selected points, and lattice constant values.
- Developed utility functions for symmetry handling and lattice definitions.
- Added type definitions for coverage responses and band data points.
- Introduced unit conversion functions for lattice constants and frequencies.
- Implemented a custom hook for tracking element sizes using ResizeObserver.

--- a/research/environment.yml
+++ b/research/environment.yml
@@ -35,6 +35,7 @@ dependencies:
   - plotly
   - seaborn
   - ipywidgets
+  - fonts-conda-ecosystem    # provides DejaVu/Computer Modern fonts for matplotlib mathtext
   
   # Signal processing and analysis
   - librosa
